--- a/OptiTrack DataCapture.ipynb
+++ b/OptiTrack DataCapture.ipynb
@@ -85,15 +85,10 @@
       "6\n",
       "7\n",
       "8\n",
+      "\n",
       "9\n",
       "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "\n",
-      "14\n",
-      "15\n",
-      "[(1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744)]\n"
+      "[(1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744)]\n"
      ]
     }
    ],
@@ -112,22 +107,23 @@
     "\n",
     "#create a new db and connect or simply connect if already exists\n",
     "\n",
-    "conn = sqlite3.connect('pilot_test.db')\n",
+    "conn = sqlite3.connect('pilot_test2.db')\n",
     "\n",
     "c = conn.cursor()\n",
     "\n",
     "#please comment c.execute section once the db is created\n",
     "\n",
-    "c.execute(\"\"\"CREATE TABLE activities (\n",
-    "            date text,\n",
-    "            sourceId integer,\n",
-    "            posx integer,\n",
-    "            posy integer,\n",
-    "            posz integer,\n",
-    "            orx integer,\n",
-    "            ory integer,\n",
-    "            orz integer\n",
-    "            )\"\"\")\n",
+    "# c.execute(\"\"\"CREATE TABLE activities (\n",
+    "#             date text,\n",
+    "#             sourceId integer,\n",
+    "#             posx integer,\n",
+    "#             posy integer,\n",
+    "#             posz integer,\n",
+    "#             orw integer,\n",
+    "#             orx integer,\n",
+    "#             ory integer,\n",
+    "#             orz integer\n",
+    "#             )\"\"\")\n",
     "\n",
     "done = False\n",
     "\n",
@@ -152,8 +148,8 @@
     "\n",
     "def insert_act(act):\n",
     "    with conn:\n",
-    "        c.execute(\"INSERT INTO activities VALUES ( :date, :sourceId, :posx, :posy, :posz, :orx, :ory, :orz)\", \n",
-    "              {'date': act.date, 'sourceId': act.sourceId, 'posx': act.posx, 'posy': act.posy, 'posz': act.posz, 'orx': act.orx, 'ory': act.ory, 'orz': act.orz})\n",
+    "        c.execute(\"INSERT INTO activities VALUES ( :date, :sourceId, :posx, :posy, :posz, :orw, :orx, :ory, :orz)\", \n",
+    "              {'date': act.date, 'sourceId': act.sourceId, 'posx': act.posx, 'posy': act.posy, 'posz': act.posz, 'orw': act.orw, 'orx': act.orx, 'ory': act.ory, 'orz': act.orz})\n",
     "        conn.commit()\n",
     "        \n",
     "while not done:\n",
@@ -166,11 +162,12 @@
     "        posx = row['posx']\n",
     "        posy = row['posy']\n",
     "        posz = row['posz']\n",
+    "        orw = row['orw']\n",
     "        orx = row['orx']\n",
     "        ory = row['ory']\n",
     "        orz = row['orz']\n",
-    "        data = (row['timestamp'], sourceId, posx, posy, posz, orx, ory,orz)\n",
-    "        act = Activity(time.strftime(\"%H:%M:%S\", time.gmtime()), sourceId, posx, posy, posz, orx, ory, orz)\n",
+    "        data = (row['timestamp'], sourceId, posx, posy, posz, orw, orx, ory,orz)\n",
+    "        act = Activity(time.strftime(\"%H:%M:%S\", time.gmtime()), sourceId, posx, posy, posz, orw, orx, ory, orz)\n",
     "        insert_act(act)\n",
     "        conn.commit()\n",
     "        dataframe.append(data)\n",
@@ -183,7 +180,42 @@
     "    \n",
     "print(dataframe)\n",
     "\n",
-    "conn.close()\n"
+    "# f = open('pilot_test1.txt', 'w')\n",
+    "# for t in dataframe:\n",
+    "#     line = ' '.join(str(x) for x in t)\n",
+    "#     f.write(line + '\\n')\n",
+    "# f.close()\n",
+    "\n",
+    "conn.close()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# script to convert .db to .txt\n",
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "path = 'pilot1.db'\n",
+    "conn = sqlite3.connect(path)\n",
+    "header = []\n",
+    "c = conn.cursor()\n",
+    "for column in c.execute('PRAGMA table_info(\"activities\")'):\n",
+    "    header.append(column[1])\n",
+    "    \n",
+    "#Insert each data into dataframe and save as csv\n",
+    "df = pd.DataFrame(columns=header)\n",
+    "for raw in c.execute('SELECT * FROM activities ORDER BY sourceId'):\n",
+    "    series = pd.Series(list(raw), index=df.columns)\n",
+    "    df = df.append(series, ignore_index=True)\n",
+    "#df.to_csv('pilot_test.txt')\n",
+    "df.to_csv(r'pilot1.txt', header=None, index=None, sep=',', mode='a')\n"
    ]
   }
  ],
