--- a/OptiTrack DataCapture.ipynb
+++ b/OptiTrack DataCapture.ipynb
@@ -70,28 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "\n",
-      "9\n",
-      "10\n",
-      "[(1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744), (1649809399460, 0, 3.800464153289795, 0.7154061794281006, 0.30162566900253296, 0.10182812064886093, 0.5267128348350525, 0.27211031317710876, -0.7988495230674744)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Script for database creation and recording data\n",
     "\n",
@@ -197,12 +178,120 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Script for database creation and recording data with time in seconds from start\n",
+    "\n",
+    "import requests\n",
+    "import json\n",
+    "import datetime\n",
+    "from threading import Thread\n",
+    "from time import sleep\n",
+    "import csv\n",
+    "import sqlite3\n",
+    "from activity import Activity\n",
+    "import time\n",
+    "\n",
+    "#create a new db and connect or simply connect if already exists\n",
+    "\n",
+    "conn = sqlite3.connect('pilot_time.db')\n",
+    "\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "#please comment c.execute section once the db is created\n",
+    "\n",
+    "# c.execute(\"\"\"CREATE TABLE activities (\n",
+    "#             sourceId integer,\n",
+    "#             posx integer,\n",
+    "#             posy integer,\n",
+    "#             posz integer,\n",
+    "#             orw integer,\n",
+    "#             orx integer,\n",
+    "#             ory integer,\n",
+    "#             orz integer,\n",
+    "#             time integer\n",
+    "#             )\"\"\")\n",
+    "\n",
+    "done = False\n",
+    "\n",
+    "def listen_for_enter_key_press():\n",
+    "    global done\n",
+    "    input()\n",
+    "    done = True\n",
+    "    \n",
+    "#api for data capture \n",
+    "    \n",
+    "url = \"https://thor.evl.uic.edu:4000/mocap\"\n",
+    "#content = requests.get(url).content\n",
+    "#dataset = json.loads(content)\n",
+    "\n",
+    "# print(dataset)\n",
+    "\n",
+    "dataframe=list()\n",
+    "\n",
+    "listener = Thread(target=listen_for_enter_key_press)\n",
+    "listener.start()\n",
+    "count = 0\n",
+    "\n",
+    "def insert_act(act):\n",
+    "    with conn:\n",
+    "        c.execute(\"INSERT INTO activities VALUES ( :sourceId, :posx, :posy, :posz, :orw, :orx, :ory, :orz, :time)\", \n",
+    "              {'sourceId': act.sourceId, 'posx': act.posx, 'posy': act.posy, 'posz': act.posz, 'orw': act.orw, 'orx': act.orx, 'ory': act.ory, 'orz': act.orz, 'time': act.time})\n",
+    "        conn.commit()\n",
+    "\n",
+    "starttime = time.time()\n",
+    "        \n",
+    "while not done:\n",
+    "    content = requests.get(url).content\n",
+    "    dataset = json.loads(content)\n",
+    "    \n",
+    "    for row in dataset:\n",
+    "        #date = time.strftime(\"%H:%M:%S\", time.gmtime())\n",
+    "        sourceId = row['sourceId']\n",
+    "        posx = row['posx']\n",
+    "        posy = row['posy']\n",
+    "        posz = row['posz']\n",
+    "        orw = row['orw']\n",
+    "        orx = row['orx']\n",
+    "        ory = row['ory']\n",
+    "        orz = row['orz']\n",
+    "        totaltime = round((time.time() - starttime), 2)\n",
+    "#         print(totaltime)\n",
+    "        data = (sourceId, posx, posy, posz, orw, orx, ory,orz,totaltime)\n",
+    "        act = Activity(sourceId, posx, posy, posz, orw, orx, ory, orz, totaltime)\n",
+    "        insert_act(act)\n",
+    "        conn.commit()\n",
+    "        dataframe.append(data)\n",
+    "        sleep(0.01)\n",
+    "        count += 1\n",
+    "#         print(count)\n",
+    "# #     print(row['sourceIP'])\n",
+    "\n",
+    "listener.join()\n",
+    "    \n",
+    "print(dataframe)\n",
+    "\n",
+    "# f = open('pilot_test1.txt', 'w')\n",
+    "# for t in dataframe:\n",
+    "#     line = ' '.join(str(x) for x in t)\n",
+    "#     f.write(line + '\\n')\n",
+    "# f.close()\n",
+    "\n",
+    "conn.close()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# script to convert .db to .txt\n",
     "\n",
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
-    "path = 'pilot1.db'\n",
+    "path = 'pilot_time.db'\n",
     "conn = sqlite3.connect(path)\n",
     "header = []\n",
     "c = conn.cursor()\n",
@@ -215,13 +304,13 @@
     "    series = pd.Series(list(raw), index=df.columns)\n",
     "    df = df.append(series, ignore_index=True)\n",
     "#df.to_csv('pilot_test.txt')\n",
-    "df.to_csv(r'pilot1.txt', header=None, index=None, sep=',', mode='a')\n"
+    "df.to_csv(r'pilot_time.txt', header=None, index=None, sep=',', mode='a')\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -235,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
