--- a/in form.ipynb
+++ b/in form.ipynb
@@ -71,256 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a7804562",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "001 0.8 -1.5 2 0.08, gonna record both huh okay let's see\n",
-      "\n",
-      "001 -0.5 -1.5 2 2.4, what happens\n",
-      "\n",
-      "002 -0.5 -1.5 2 1.6, it blows up\n",
-      "\n",
-      "002 0.5 -1.5 2 2.8, okay so let's restart this app\n",
-      "\n",
-      "002 -0.5 -1.5 2 3.76, really\n",
-      "\n",
-      "002 -0.5 -1.5 2 16.8, so everything\n",
-      "\n",
-      "002 0.8 -1.5 2 1.68, is hands-on\n",
-      "\n",
-      "001 0 -1.5 2 1.68, okay so everything should be recording\n",
-      "\n",
-      "002 0.8 -1.5 2 2.0, now right yes\n",
-      "\n",
-      "001 0.8 -1.5 2 2.0, okay so\n",
-      "\n",
-      "002 -0.8 -1.5 2 2.0, i might want this a little bit more\n",
-      "\n",
-      "002 0 -1.5 2 6.04, okay maybe not\n",
-      "\n",
-      "002 0.8 -1.5 2 3.48, oh\n",
-      "\n",
-      "002 0.5 -1.5 2 4.96, okay\n",
-      "\n",
-      "002 -0.5 -1.5 2 1.92, all right so i might so what was the\n",
-      "\n",
-      "002 0.8 -1.5 2 2.88, query again\n",
-      "\n",
-      "001 0.8 -1.5 2 3.28, so i need something useful\n",
-      "\n",
-      "001 0.8 -1.5 2 3.36, oh i didn't say anything\n",
-      "\n",
-      "002 0.8 -1.5 2 2.8, um\n",
-      "\n",
-      "002 0 -1.5 2 7.2, this is a chart of\n",
-      "\n",
-      "001 -0.8 -1.5 2 2.88, date\n",
-      "\n",
-      "002 -0.8 -1.5 2 1.6, versus cases\n",
-      "\n",
-      "001 0.5 -1.5 2 3.84, so\n",
-      "\n",
-      "002 -0.5 -1.5 2 0.96, which regions\n",
-      "\n",
-      "001 -0.5 -1.5 2 1.84, of the u.s we prioritize for directing\n",
-      "\n",
-      "002 0.5 -1.5 2 4.0, resources\n",
-      "\n",
-      "001 0.8 -1.5 2 3.76, show me the regions of the united states\n",
-      "\n",
-      "001 0.8 -1.5 2 29.36, show me a map of regions\n",
-      "\n",
-      "002 0.5 -1.5 2 5.92, have\n",
-      "\n",
-      "002 0.8 -1.5 2 1.36, it surprises you even\n",
-      "\n",
-      "002 0.5 -1.5 2 2.32, so it looks like\n",
-      "\n",
-      "001 -0.5 -1.5 2 3.76, southeast\n",
-      "\n",
-      "002 0.5 -1.5 2 2.48, south east\n",
-      "\n",
-      "001 0.8 -1.5 2 1.52, that's\n",
-      "\n",
-      "002 -0.5 -1.5 2 2.08, this area and the midwest\n",
-      "\n",
-      "001 -0.5 -1.5 2 2.8, are the highest\n",
-      "\n",
-      "001 0.5 -1.5 2 1.6, so there's a lot of counties\n",
-      "\n",
-      "002 -0.5 -1.5 2 2.4, there's a lot of\n",
-      "\n",
-      "001 0 -1.5 2 1.68, little sleeves\n",
-      "\n",
-      "001 0.8 -1.5 2 1.76, well i could kill my paper yeah because\n",
-      "\n",
-      "001 -0.5 -1.5 2 1.92, it's an infrared screen\n",
-      "\n",
-      "001 0.8 -1.5 2 1.76, that's why it picks it up and then\n",
-      "\n",
-      "002 0 -1.5 2 4.88, our region's different the regions are\n",
-      "\n",
-      "001 0.8 -1.5 2 1.84, different\n",
-      "\n",
-      "002 -0.8 -1.5 2 2.16, show me covet in the southeast\n",
-      "\n",
-      "002 0 -1.5 2 10.4, very high\n",
-      "\n",
-      "002 0.8 -1.5 2 15.76, yeah so\n",
-      "\n",
-      "001 -0.5 -1.5 2 1.52, it's selected\n",
-      "\n",
-      "002 -0.8 -1.5 2 3.76, when you're dragging it\n",
-      "\n",
-      "001 0.5 -1.5 2 1.84, that means\n",
-      "\n",
-      "002 0 -1.5 2 2.8, when you click it it's you're selected\n",
-      "\n",
-      "001 0.5 -1.5 2 1.76, and that means you're getting ready to\n",
-      "\n",
-      "002 0.8 -1.5 2 1.2, do a pivot oh but when you're dragging\n",
-      "\n",
-      "002 -0.5 -1.5 2 2.24, it it also makes sense\n",
-      "\n",
-      "002 0.5 -1.5 2 2.48, you have to make sure you have selected\n",
-      "\n",
-      "001 0.8 -1.5 2 1.52, oh\n",
-      "\n",
-      "002 0.5 -1.5 2 0.8, so\n",
-      "\n",
-      "002 -0.8 -1.5 2 14.88, oh\n",
-      "\n",
-      "002 0.8 -1.5 2 1.04, i see\n",
-      "\n",
-      "001 0 -1.5 2 5.52, it's my joy it's crazy\n",
-      "\n",
-      "001 -0.5 -1.5 2 2.16, maybe we have to use a mouse\n",
-      "\n",
-      "001 -0.5 -1.5 2 3.92, right\n",
-      "\n",
-      "001 -0.8 -1.5 2 5.76, [Music]\n",
-      "\n",
-      "001 -0.5 -1.5 2 3.6, are these good\n",
-      "\n",
-      "001 0.8 -1.5 2 1.44, yeah\n",
-      "\n",
-      "001 0.5 -1.5 2 2.8, why are they so good\n",
-      "\n",
-      "002 -0.5 -1.5 2 8.0, show me a map of access to doctors\n",
-      "\n",
-      "001 0.5 -1.5 2 14.64, show me access to doctors in the mid in\n",
-      "\n",
-      "001 -0.5 -1.5 2 3.6, the southwest\n",
-      "\n",
-      "002 0 -1.5 2 9.6, kick ass\n",
-      "\n",
-      "002 -0.5 -1.5 2 6.48, show me\n",
-      "\n",
-      "001 0.5 -1.5 2 1.36, access to doctors in the midwest\n",
-      "\n",
-      "002 -0.5 -1.5 2 22.56, yeah that's interesting yeah yeah\n",
-      "\n",
-      "002 0.5 -1.5 2 2.48, we're looking at the y-axis it's also\n",
-      "\n",
-      "001 -0.5 -1.5 2 3.72, oh all the numbers you can't compare\n",
-      "\n",
-      "002 0.5 -1.5 2 2.92, evenly yeah\n",
-      "\n",
-      "002 0.5 -1.5 2 1.92, um yeah\n",
-      "\n",
-      "002 0.8 -1.5 2 2.72, but still it's 40.\n",
-      "\n",
-      "002 0.5 -1.5 2 2.56, okay so we got to be careful because the\n",
-      "\n",
-      "001 -0.5 -1.5 2 2.32, axes are not the same\n",
-      "\n",
-      "001 -0.8 -1.5 2 4.4, so we may\n",
-      "\n",
-      "002 0 -1.5 2 2.4, want to figure a way to\n",
-      "\n",
-      "002 0.5 -1.5 2 2.8, okay\n",
-      "\n",
-      "001 0.5 -1.5 2 5.84, so this is selected so okay\n",
-      "\n",
-      "002 0.8 -1.5 2 2.8, show me the same map for\n",
-      "\n",
-      "001 -0.5 -1.5 2 2.64, the east coast\n",
-      "\n",
-      "002 0.8 -1.5 2 22.88, show me a map of region\n",
-      "\n",
-      "001 0.8 -1.5 2 12.48, show me this for the rockies\n",
-      "\n",
-      "002 0 -1.5 2 8.32, that worked\n",
-      "\n",
-      "002 0.5 -1.5 2 9.84, show me this for\n",
-      "\n",
-      "002 -0.5 -1.5 2 2.24, access to doctors\n",
-      "\n",
-      "002 0.5 -1.5 2 18.48, you can see i'm gonna run out of space\n",
-      "\n",
-      "001 -0.5 -1.5 2 1.44, real fast\n",
-      "\n",
-      "001 -0.8 -1.5 2 5.12, show me elderly percentage\n",
-      "\n",
-      "001 -0.5 -1.5 2 7.2, show me something about elderly\n",
-      "\n",
-      "001 -0.8 -1.5 2 1.44, percentage\n",
-      "\n",
-      "002 -0.5 -1.5 2 8.56, what is the correlation between elderly\n",
-      "\n",
-      "002 0.5 -1.5 2 2.0, percentage and covet risk\n",
-      "\n",
-      "001 0 -1.5 2 11.52, it's like black magic\n",
-      "\n",
-      "002 -0.5 -1.5 2 1.92, it says voodoo\n",
-      "\n",
-      "002 -0.8 -1.5 2 8.48, access to doctors\n",
-      "\n",
-      "002 0 -1.5 2 2.24, by region huh\n",
-      "\n",
-      "002 -0.8 -1.5 2 4.56, okay let's stop this for now\n",
-      "\n",
-      "002 0.5 -1.5 2 2.88, let's save all your data\n",
-      "\n",
-      "002 0.8 -1.5 2 6.64, i'll save your app data too\n",
-      "\n",
-      "002 0.8 -1.5 2 6.72, yeah\n",
-      "\n",
-      "002 0 -1.5 2 2.88, good because when we saved your app data\n",
-      "\n",
-      "002 0.5 -1.5 2 2.88, the software captured made a screenshot\n",
-      "\n",
-      "001 -0.8 -1.5 2 2.4, of this whole thing too\n",
-      "\n",
-      "001 -0.5 -1.5 2 1.68, oh that's right right\n",
-      "\n",
-      "002 0 -1.5 2 1.92, because we don't make one you don't make\n",
-      "\n",
-      "002 -0.5 -1.5 2 1.52, one right yeah\n",
-      "\n",
-      "001 0.5 -1.5 2 2.0, so this is this is nice to see\n",
-      "\n",
-      "002 0.5 -1.5 2 2.72, right\n",
-      "\n",
-      "001 -0.8 -1.5 2 1.36, and then\n",
-      "\n",
-      "002 0.8 -1.5 2 1.68, so now let's stop this guy\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import random\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "convo_list = []\n",
     "\n",
@@ -362,6 +119,367 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dc8c5eff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.08, 0.08, gonna record both huh okay let's see\n",
+      "\n",
+      "2.48, 2.4, what happens\n",
+      "\n",
+      "4.08, 1.6, it blows up\n",
+      "\n",
+      "6.88, 2.8, okay so let's restart this app\n",
+      "\n",
+      "10.64, 3.76, really\n",
+      "\n",
+      "27.44, 16.8, so everything\n",
+      "\n",
+      "29.12, 1.68, is hands-on\n",
+      "\n",
+      "30.8, 1.68, okay so everything should be recording\n",
+      "\n",
+      "32.8, 2.0, now right yes\n",
+      "\n",
+      "34.8, 2.0, okay so\n",
+      "\n",
+      "36.8, 2.0, i might want this a little bit more\n",
+      "\n",
+      "42.84, 6.04, okay maybe not\n",
+      "\n",
+      "46.32, 3.48, oh\n",
+      "\n",
+      "51.28, 4.96, okay\n",
+      "\n",
+      "53.2, 1.92, all right so i might so what was the\n",
+      "\n",
+      "56.08, 2.88, query again\n",
+      "\n",
+      "59.36, 3.28, so i need something useful\n",
+      "\n",
+      "62.72, 3.36, oh i didn't say anything\n",
+      "\n",
+      "65.52, 2.8, um\n",
+      "\n",
+      "72.72, 7.2, this is a chart of\n",
+      "\n",
+      "75.6, 2.88, date\n",
+      "\n",
+      "77.2, 1.6, versus cases\n",
+      "\n",
+      "81.04, 3.84, so\n",
+      "\n",
+      "82.0, 0.96, which regions\n",
+      "\n",
+      "83.84, 1.84, of the u.s we prioritize for directing\n",
+      "\n",
+      "87.84, 4.0, resources\n",
+      "\n",
+      "91.6, 3.76, show me the regions of the united states\n",
+      "\n",
+      "120.96, 29.36, show me a map of regions\n",
+      "\n",
+      "126.88, 5.92, have\n",
+      "\n",
+      "128.24, 1.36, it surprises you even\n",
+      "\n",
+      "130.56, 2.32, so it looks like\n",
+      "\n",
+      "134.32, 3.76, southeast\n",
+      "\n",
+      "136.8, 2.48, south east\n",
+      "\n",
+      "138.32, 1.52, that's\n",
+      "\n",
+      "140.4, 2.08, this area and the midwest\n",
+      "\n",
+      "143.2, 2.8, are the highest\n",
+      "\n",
+      "144.8, 1.6, so there's a lot of counties\n",
+      "\n",
+      "147.2, 2.4, there's a lot of\n",
+      "\n",
+      "148.88, 1.68, little sleeves\n",
+      "\n",
+      "150.64, 1.76, well i could kill my paper yeah because\n",
+      "\n",
+      "152.56, 1.92, it's an infrared screen\n",
+      "\n",
+      "154.32, 1.76, that's why it picks it up and then\n",
+      "\n",
+      "159.2, 4.88, our region's different the regions are\n",
+      "\n",
+      "161.04, 1.84, different\n",
+      "\n",
+      "163.2, 2.16, show me covet in the southeast\n",
+      "\n",
+      "173.6, 10.4, very high\n",
+      "\n",
+      "189.36, 15.76, yeah so\n",
+      "\n",
+      "190.88, 1.52, it's selected\n",
+      "\n",
+      "194.64, 3.76, when you're dragging it\n",
+      "\n",
+      "196.48, 1.84, that means\n",
+      "\n",
+      "199.28, 2.8, when you click it it's you're selected\n",
+      "\n",
+      "201.04, 1.76, and that means you're getting ready to\n",
+      "\n",
+      "202.24, 1.2, do a pivot oh but when you're dragging\n",
+      "\n",
+      "204.48, 2.24, it it also makes sense\n",
+      "\n",
+      "206.96, 2.48, you have to make sure you have selected\n",
+      "\n",
+      "208.48, 1.52, oh\n",
+      "\n",
+      "209.28, 0.8, so\n",
+      "\n",
+      "224.16, 14.88, oh\n",
+      "\n",
+      "225.2, 1.04, i see\n",
+      "\n",
+      "230.72, 5.52, it's my joy it's crazy\n",
+      "\n",
+      "232.88, 2.16, maybe we have to use a mouse\n",
+      "\n",
+      "236.8, 3.92, right\n",
+      "\n",
+      "242.56, 5.76, [Music]\n",
+      "\n",
+      "246.16, 3.6, are these good\n",
+      "\n",
+      "247.6, 1.44, yeah\n",
+      "\n",
+      "250.4, 2.8, why are they so good\n",
+      "\n",
+      "258.4, 8.0, show me a map of access to doctors\n",
+      "\n",
+      "273.04, 14.64, show me access to doctors in the mid in\n",
+      "\n",
+      "276.64, 3.6, the southwest\n",
+      "\n",
+      "286.24, 9.6, kick ass\n",
+      "\n",
+      "292.72, 6.48, show me\n",
+      "\n",
+      "294.08, 1.36, access to doctors in the midwest\n",
+      "\n",
+      "316.64, 22.56, yeah that's interesting yeah yeah\n",
+      "\n",
+      "319.12, 2.48, we're looking at the y-axis it's also\n",
+      "\n",
+      "322.84, 3.72, oh all the numbers you can't compare\n",
+      "\n",
+      "325.76, 2.92, evenly yeah\n",
+      "\n",
+      "327.68, 1.92, um yeah\n",
+      "\n",
+      "330.4, 2.72, but still it's 40.\n",
+      "\n",
+      "332.96, 2.56, okay so we got to be careful because the\n",
+      "\n",
+      "335.28, 2.32, axes are not the same\n",
+      "\n",
+      "339.68, 4.4, so we may\n",
+      "\n",
+      "342.08, 2.4, want to figure a way to\n",
+      "\n",
+      "344.88, 2.8, okay\n",
+      "\n",
+      "350.72, 5.84, so this is selected so okay\n",
+      "\n",
+      "353.52, 2.8, show me the same map for\n",
+      "\n",
+      "356.16, 2.64, the east coast\n",
+      "\n",
+      "379.04, 22.88, show me a map of region\n",
+      "\n",
+      "391.52, 12.48, show me this for the rockies\n",
+      "\n",
+      "399.84, 8.32, that worked\n",
+      "\n",
+      "409.68, 9.84, show me this for\n",
+      "\n",
+      "411.92, 2.24, access to doctors\n",
+      "\n",
+      "430.4, 18.48, you can see i'm gonna run out of space\n",
+      "\n",
+      "431.84, 1.44, real fast\n",
+      "\n",
+      "436.96, 5.12, show me elderly percentage\n",
+      "\n",
+      "444.16, 7.2, show me something about elderly\n",
+      "\n",
+      "445.6, 1.44, percentage\n",
+      "\n",
+      "454.16, 8.56, what is the correlation between elderly\n",
+      "\n",
+      "456.16, 2.0, percentage and covet risk\n",
+      "\n",
+      "467.68, 11.52, it's like black magic\n",
+      "\n",
+      "469.6, 1.92, it says voodoo\n",
+      "\n",
+      "478.08, 8.48, access to doctors\n",
+      "\n",
+      "480.32, 2.24, by region huh\n",
+      "\n",
+      "484.88, 4.56, okay let's stop this for now\n",
+      "\n",
+      "487.76, 2.88, let's save all your data\n",
+      "\n",
+      "494.4, 6.64, i'll save your app data too\n",
+      "\n",
+      "501.12, 6.72, yeah\n",
+      "\n",
+      "504.0, 2.88, good because when we saved your app data\n",
+      "\n",
+      "506.88, 2.88, the software captured made a screenshot\n",
+      "\n",
+      "509.28, 2.4, of this whole thing too\n",
+      "\n",
+      "510.96, 1.68, oh that's right right\n",
+      "\n",
+      "512.88, 1.92, because we don't make one you don't make\n",
+      "\n",
+      "514.4, 1.52, one right yeah\n",
+      "\n",
+      "516.4, 2.0, so this is this is nice to see\n",
+      "\n",
+      "519.12, 2.72, right\n",
+      "\n",
+      "520.48, 1.36, and then\n",
+      "\n",
+      "522.16, 1.68, so now let's stop this guy\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "convo_list = []\n",
+    "\n",
+    "#contact_record = \"\"\n",
+    "\n",
+    "def printrecord(contact_record):\n",
+    "    prevtime = 0\n",
+    "    with open('8minutes_updated.txt', 'w') as f:\n",
+    "        for convo in contact_record:\n",
+    "            for k, v in convo.items():\n",
+    "                if(k == \"text\"):\n",
+    "                    text = v\n",
+    "                if(k == \"start\"):\n",
+    "                    time = v - prevtime\n",
+    "                    prevtime = v\n",
+    "            newline = str(round(prevtime, 2)) + \", \" + str(round(time, 2)) +\", \"+ text + \"\\n\"\n",
+    "            print(newline)\n",
+    "            f.write(newline)\n",
+    "    f.close()\n",
+    "                \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "def read_contact(filename):\n",
+    "    with open(filename, 'r') as f:\n",
+    "        contact_record = json.load(f)\n",
+    "        #print(contact_record)\n",
+    "        printrecord(contact_record)\n",
+    "    #f.close()\n",
+    "\n",
+    "read_contact(\"firsttest_8minutes.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "148edb37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0,3.800464153289795,0.7154061794281006,0.30162566900253296,0.10182812064886093,0.5267128348350525,0.27211031317710876,-0.7988495230674744,0.08, 0.08, gonna record both huh okay let's see\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "convo_filename = \"8minutes_updated.txt\"\n",
+    "# opening the file in read mode\n",
+    "my_file = open(convo_filename, \"r\")\n",
+    "  \n",
+    "# reading the file\n",
+    "data = my_file.read()\n",
+    "  \n",
+    "# replacing end splitting the text \n",
+    "# when newline ('\\n') is seen.\n",
+    "data_into_convo_list = data.split(\"\\n\")\n",
+    "#print(data_into_convo_list)\n",
+    "my_file.close()\n",
+    "\n",
+    "convo_iterator = 0\n",
+    "\n",
+    "current_convo = data_into_convo_list[convo_iterator]\n",
+    "\n",
+    "#print(current_convo)\n",
+    "\n",
+    "tracking_filename = \"pilot_time.txt\"\n",
+    "\n",
+    "my_file = open(tracking_filename, \"r\")\n",
+    "  \n",
+    "# reading the file\n",
+    "data = my_file.read()\n",
+    "  \n",
+    "# replacing end splitting the text \n",
+    "# when newline ('\\n') is seen.\n",
+    "data_into_tracking_list = data.split(\"\\n\")\n",
+    "#print(data_into_convo_list)\n",
+    "my_file.close()\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open('pilot1_combine.txt', 'w') as f:\n",
+    "    for data in data_into_tracking_list:\n",
+    "        items = data.split(\",\")\n",
+    "        currenttime = items[-1]\n",
+    "        #print(currenttime)\n",
+    "        if(current_convo.split(',')[0] == currenttime):\n",
+    "            data = data + ',' + current_convo.split(',')[1] + ',' + current_convo.split(',')[2]\n",
+    "            print(data)\n",
+    "            current_convo = data_into_convo_list[convo_iterator+1]\n",
+    "        else:\n",
+    "            data = data + \"\"\n",
+    "#             print(data)\n",
+    "        \n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acc1d6ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "print(time.gmtime(18:52:27))"
    ]
   }
  ],
