--- a/OptiTrack DataCapture.ipynb
+++ b/OptiTrack DataCapture.ipynb
@@ -174,9 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19932/1316165851.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     81\u001b[0m         \u001b[0mconn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m         \u001b[0mdataframe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 83\u001b[1;33m         \u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     84\u001b[0m         \u001b[0mcount\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m \u001b[1;31m#         print(count)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#Script for database creation and recording data with time in seconds from start\n",
     "\n",
@@ -192,7 +204,7 @@
     "\n",
     "#create a new db and connect or simply connect if already exists\n",
     "\n",
-    "conn = sqlite3.connect('pilot_time.db')\n",
+    "conn = sqlite3.connect('pilot_time6.txt')\n",
     "\n",
     "c = conn.cursor()\n",
     "\n",
@@ -260,7 +272,7 @@
     "        insert_act(act)\n",
     "        conn.commit()\n",
     "        dataframe.append(data)\n",
-    "        sleep(0.01)\n",
+    "        sleep(0.1)\n",
     "        count += 1\n",
     "#         print(count)\n",
     "# #     print(row['sourceIP'])\n",
@@ -269,20 +281,32 @@
     "    \n",
     "print(dataframe)\n",
     "\n",
-    "# f = open('pilot_test1.txt', 'w')\n",
-    "# for t in dataframe:\n",
-    "#     line = ' '.join(str(x) for x in t)\n",
-    "#     f.write(line + '\\n')\n",
-    "# f.close()\n",
     "\n",
-    "conn.close()\n",
+    "\n",
+    "#conn.close()\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with conn:\n",
+    "    c.execute(\"select * from activities;\")\n",
+    "    with open(\"pilot_time6.csv\", \"w\", newline='') as csv_file:  # Python 3 version                # Python 2 version\n",
+    "        csv_writer = csv.writer(csv_file)\n",
+    "        csv_writer.writerow([i[0] for i in c.description]) # write headers\n",
+    "        csv_writer.writerows(c)\n",
+    "    conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +315,7 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
-    "path = 'pilot_time.db'\n",
+    "path = 'pilot_time5.db'\n",
     "conn = sqlite3.connect(path)\n",
     "header = []\n",
     "c = conn.cursor()\n",
@@ -304,8 +328,22 @@
     "    series = pd.Series(list(raw), index=df.columns)\n",
     "    df = df.append(series, ignore_index=True)\n",
     "#df.to_csv('pilot_test.txt')\n",
-    "df.to_csv(r'pilot_time.txt', header=None, index=None, sep=',', mode='a')\n"
+    "df.to_csv(r'pilot_time5.txt', header=None, index=None, sep=',', mode='a')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
